src/pages/Blog.css
/* All */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.blog {
    /* navbar padding & footer padding?*/
    padding: calc(60px * 1.1) 8% 0px;

    background-color: #f0ede8;
}
.blog header {
    margin-bottom: 80px;
}
.blog main {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
.heroImg {
    width: 100%;
    max-height: 600px;
    aspect-ratio: 16 / 9;
    /* height: 100%; */
    object-fit: cover;
    /* FIXME! change later for flexibility */
    object-position: 0 80%;
}
.title {
    display: flex;
    align-items: end;
    justify-content: space-between;
    margin-bottom: 5px;
}
.mainTitle {
    width: 75%;
}
.dateLocation {
    text-align: right;
}
.title h1 {
    font-size: 4em;
}
.title p {
    font-size: 1.1em;
}
.info {
    width: 25%;
}
.content {
    width: 70%;
}
.blog .asideSub {
    background-color: #eae6e0;
    box-shadow: 0px 0px 10px #b0aba3;
    border-radius: 10px;
    padding: 10px 20px 20px;
}
.blog main section, main aside {
    margin-bottom: 40px;
}
.blog main h2 {
    margin-bottom: 15px;
    font-size: 2.5em;
}
.blog main section .subsection {
    margin-bottom: 70px;
}
.blog main section .subsection h3 {
    font-size: 1.7em;
    margin-bottom: 15px;
    position: relative;
}
.blog main section .subsection h3::after {
    content: "";
    position: absolute;
    top: 70%;
    width: 80%;
    margin-left: 1%;
    border-bottom: 1px solid black;
}
.blog main section .subsection p {
    margin-bottom: 20px;
    font-size: 1.1em;
    line-height: 2;
}

.blog main table {
    border-collapse: collapse;
    width: 100%;
    margin: auto;
    /* box-shadow: #454545 1px 1px 3px; */
}
.blog main table th {
    background-color: #454545;
    color: #fff;
}
.blog main table td {
    background: #fff;
}
.blog main table th, main table td{
    border: 1.5px solid #454545;
    padding: 5px 10px;
    text-align: left;
}
.blog .imgH {
    width: 100%;
    padding: 0px 5%;
}
.blog .imgV2 {
    width: 50%;
    padding: 0px 2%;
}
.blog .imgV3 {
    width: 33%;
    padding: 0px 1%;
}


/* smartphone */
@media (max-width: 992px) {
    .blog main {
        flex-direction: column;
    }
    .info {
        width: 100%;
    }
    .content {
        width: 100%;
    }
    .title {
        flex-direction: column;
    }
    .mainTitle {
        width: 100%;
        margin-bottom: 10px;
    }
    .dateLocation {
        display: flex;
    }
    .dateLocation p:first-child {
        margin: 0 10px;
    }
}

